# OpenCV

./: .gitignore
image_read/: CMakeLists.txt
image_read/src/: main.cpp
practice/: CMakeLists.txt
practice/scripts/: blur_video.py  canny_ED_video.py  capture_and_store.py  chapter_ex.py  log_polar.py  mouse_click_marker.py  view_camera.py  view_img.py  view_video.py
practice/src/: blur_video.cpp  canny_ED_video.cpp  capture_and_store.cpp  chapter_ex.cpp  log_polar.cpp  mouse_click_marker.cpp  view_camera.cpp  view_img.cpp  view_video.cpp
python/: image_read.py
